--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "astro-theme-resume",
   "type": "module",
   "version": "0.0.1",
-  "description": "An open-sourced personal resume site template with a blog, built with Astro and Tailwind.",
+  "description": "An open-sourced resume site template with a blog using Astro.",
   "homepage": "https://github.com/yurikong/astro-theme-resume#readme",
   "bugs": {
     "url": "https://github.com/yurikong/astro-theme-resume/issues",
@@ -27,17 +27,19 @@
   "dependencies": {
     "@astrojs/check": "^0.8.3",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.12.2",
-    "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.1.85",
     "@typescript-eslint/parser": "^7.17.0",
+    "@unocss/eslint-config": "^0.61.9",
+    "@unocss/reset": "^0.61.9",
     "eslint": "^9.8.0",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "unocss": "^0.61.9"
   }
 }
