--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@iconify-json/material-symbols": "^1.1.85",
+    "@iconify-json/ri": "^1.2.0",
     "@typescript-eslint/parser": "^7.17.0",
     "@unocss/eslint-config": "^0.61.9",
     "@unocss/reset": "^0.61.9",
