update resolve alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "lib": ["DOM", "ESNext"],
     "paths": {
+      "~/*": ["src/*"],
       "~components/*": ["src/components/*"],
       "~assets/*": ["src/assets/*"],
       "~layouts/*": ["src/layouts/*"],
