--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrojs/check": "^0.8.3",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.12.2",
+    "nanoid": "^5.0.7",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
