--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@iconify-json/ri": "^1.2.0",
+    "@types/dom-view-transitions": "^1.0.5",
     "@typescript-eslint/parser": "^7.17.0",
     "@unocss/eslint-config": "^0.61.9",
     "@unocss/reset": "^0.61.9",
