--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "astro-theme-resume-minimalist",
+  "name": "astro-resume-minimalist",
   "type": "module",
   "version": "1.0.0",
   "description": "An open-sourced minimal resume site template built with Astro.",
-  "homepage": "https://github.com/yurikong/astro-theme-resume-minimalist#readme",
+  "homepage": "https://github.com/yurikong/astro-resume-minimalist#readme",
   "bugs": {
-    "url": "https://github.com/yurikong/astro-theme-resume-minimalist/issues",
+    "url": "https://github.com/yurikong/astro-resume-minimalist/issues",
     "email": "jackdu2013@163.com"
   },
   "author": "Jianqiang Du <jackdu2013@163.com> (https://yurikong.github.io)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yurikong/astro-theme-resume-minimalist.git"
+    "url": "https://github.com/yurikong/astro-resume-minimalist.git"
   },
   "license": "MIT",
   "private": true,
